[gd_scene load_steps=10 format=3 uid="uid://bk44w6ltyiq7d"]

[ext_resource type="Script" uid="uid://bsaenbgmc0g4p" path="res://scripts/HUD/Menu.gd" id="1_g04yw"]
[ext_resource type="Theme" uid="uid://btc3kqb6qx6k3" path="res://themes/button.tres" id="2_27d8b"]
[ext_resource type="Texture2D" uid="uid://cumum55a2e8e4" path="res://images/Menu_Screen.png" id="2_bscqu"]
[ext_resource type="AudioStream" uid="uid://c14cj6uhjlgdt" path="res://sounds/BGM/Synthwave Game Vlog [No Copyright Music]  San Juniper.wav" id="3_ry4k5"]
[ext_resource type="Script" uid="uid://cyuj83dbup7jx" path="res://scenes/HUD/main_menu_buttons.gd" id="3_ubcrl"]
[ext_resource type="FontFile" uid="uid://b6b3cu5hbka6f" path="res://fonts/Hey Comic.otf" id="4_qxk2a"]
[ext_resource type="AudioStream" uid="uid://bo033vak4kltn" path="res://sounds/SFX/Buttons/ButtonSelected.wav" id="6_q25pb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjy7t"]
bg_color = Color(0.305882, 0.67451, 0.615686, 1)

[sub_resource type="Theme" id="Theme_seh5y"]
Button/styles/normal = SubResource("StyleBoxFlat_sjy7t")

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g04yw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
show_behind_parent = true
position = Vector2(574.5, 328.5)
scale = Vector2(0.448828, 0.452083)
texture = ExtResource("2_bscqu")

[node name="MainMenuButtons" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 455.0
offset_top = 437.0
offset_right = 688.0
offset_bottom = 581.0
theme = SubResource("Theme_seh5y")
script = ExtResource("3_ubcrl")

[node name="Play" type="Button" parent="CanvasLayer/MainMenuButtons"]
layout_mode = 2
theme = ExtResource("2_27d8b")
text = "Jogar"

[node name="Options" type="Button" parent="CanvasLayer/MainMenuButtons"]
layout_mode = 2
theme = ExtResource("2_27d8b")
text = "Opções"

[node name="Exit" type="Button" parent="CanvasLayer/MainMenuButtons"]
layout_mode = 2
theme = ExtResource("2_27d8b")
text = "Sair
"

[node name="Créditos" type="Button" parent="CanvasLayer/MainMenuButtons"]
layout_mode = 2
theme = ExtResource("2_27d8b")
theme_override_fonts/font = ExtResource("4_qxk2a")
theme_override_font_sizes/font_size = 25
text = "Créditos"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 267.0
offset_top = 186.0
offset_right = 924.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("4_qxk2a")
theme_override_font_sizes/font_size = 50
text = "Aprenda, Preserve, Proteja!"

[node name="MainBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ry4k5")
volume_db = -20.0
bus = &"BGM"

[node name="ButtonSelected" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_q25pb")
volume_db = -10.0
bus = &"SFX"

[connection signal="pressed" from="CanvasLayer/MainMenuButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuButtons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuButtons/Créditos" to="." method="_on_créditos_pressed"]
